--- a/pet-shop-app/src/App.css
+++ b/pet-shop-app/src/App.css
@@ -4,8 +4,57 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: #333;
+}
+
 body {
   background-color: #415749;
+}
+
+.home-div {
+  display: flex;
+  justify-content: space-between;
+}
+
+.home-col {
+  flex: 1;
+  margin: 8px;
+  padding: 16px;
+  box-sizing: border-box;
+}
+
+.welcome-heading {
+  font-size: 2rem;
+}
+
+.welcome-text {
+  font-size: 1.2rem;
+  line-height: 2.3rem;
+}
+
+.home-image {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
 
 .navbar {
@@ -13,14 +62,14 @@ body {
   justify-content: space-around;
   align-items: center;
   padding: 15px;
-  position: fixed;
   top: 0;
   right: 0;
   width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
 .navbar.scrolled {
-  background-color: blue;
+  background-color: #1f1f1f;
 }
 
 .nav-logo {
@@ -84,6 +133,266 @@ body {
 .icon {
   cursor: pointer;
   color: #e9eaec;
+}
+
+.home-div {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.home-col {
+  flex: 1;
+  margin: 8px;
+  padding: 16px;
+  box-sizing: border-box;
+}
+
+.home-image {
+  max-width: 90%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border-radius: 10px;
+  filter: brightness(1);
+  transition: all 200ms ease-in-out;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
+
+.home-image:hover {
+  filter: brightness(0.9);
+}
+
+.welcome-heading {
+  font-size: 3rem;
+  color: #ffffff;
+}
+
+.welcome-text {
+  color: #ffffff;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  font-size: 1.5rem;
+}
+
+.welcome-heading::selection,
+.welcome-text::selection {
+  background-color: #1f1f1f;
+  color: white;
+}
+
+button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  background: transparent;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+}
+
+button.learn-more {
+  width: 12rem;
+  height: auto;
+}
+
+button.learn-more .circle {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: relative;
+  display: block;
+  margin: 0;
+  width: 3rem;
+  height: 3rem;
+  background: #1f1f1f;
+  border-radius: 1.625rem;
+}
+
+button.learn-more .circle .icon {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background: #fff;
+}
+
+button.learn-more .circle .icon.arrow {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  left: 0.625rem;
+  width: 1.125rem;
+  height: 0.125rem;
+  background: none;
+}
+
+button.learn-more .circle .icon.arrow::before {
+  position: absolute;
+  content: "";
+  top: -0.29rem;
+  right: 0.0625rem;
+  width: 0.625rem;
+  height: 0.625rem;
+  border-top: 0.125rem solid #fff;
+  border-right: 0.125rem solid #fff;
+  transform: rotate(45deg);
+}
+
+button.learn-more .button-text {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0.75rem 0;
+  margin: 0 0 0 1.85rem;
+  color: #ffffff;
+  font-weight: 700;
+  line-height: 1.6;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+button:hover .circle {
+  width: 100%;
+}
+
+button:hover .circle .icon.arrow {
+  background: #fff;
+  transform: translate(1rem, 0);
+}
+
+button:hover .button-text {
+  color: #fff;
+}
+
+.about-div {
+  margin-top: 5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row-reverse;
+}
+
+.about-col {
+  flex: 1;
+  margin: 8px;
+  padding: 16px;
+  box-sizing: border-box;
+}
+
+.about-icons {
+  color: #1f1f1f;
+}
+
+.about-part {
+  color: white;
+}
+
+.about-misson {
+  margin-top: 10px;
+  color: white;
+  font-size: 1.3rem;
+  line-height: 2.1rem;
+}
+
+.about-misson::selection,
+.about-part::selection {
+  background-color: #1f1f1f;
+  color: white;
+}
+
+.service-div {
+  margin-top: 13%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.service-col-1 {
+  flex: 1;
+  margin: 8px;
+  padding: 16px;
+  box-sizing: border-box;
+  background-color: #1f1f1f;
+  border-radius: 10px;
+  padding: 20px 40px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
+
+.service-col {
+  flex: 1;
+  margin: 8px;
+  padding: 16px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-around;
+}
+
+.service-item {
+  text-align: center;
+}
+
+.hover-effect:hover {
+  transform: translateY(-30px);
+}
+
+.service-item img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.service-text {
+  font-size: 1.2rem;
+  color: white;
+  padding: 3px 5px;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #415749;
+  transition: all 200ms ease-in-out;
+  line-height: 2.3rem;
+}
+
+.service-text:hover {
+  background-color: #1f1f1f;
+}
+
+.footer-div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: #1f1f1f;
+  padding: 20px;
+  color: white;
+  margin-top: 10%;
+  border-radius: 10px;
+}
+
+.col {
+  flex: 1;
+  margin: 0 10px;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .col {
+    flex: 100%;
+    margin: 10px 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .col {
+    margin: 40px 5px;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -228,4 +537,56 @@ body {
     text-align: center;
     margin-right: 30px;
   }
+}
+
+@media (max-width: 768px) {
+  .home-div {
+    margin-top: 5rem;
+    flex-direction: column;
+  }
+  .about-div {
+    flex-direction: column;
+  }
+  .service-div {
+    flex-direction: column;
+  }
+  .service-col {
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+}
+
+.dark-mode {
+  background-color: #1f1f1f;
+  color: #ffffff;
+}
+
+.dark-mode button.learn-more .circle {
+  background-color: #415749;
+}
+
+.dark-mode .about-icons {
+  color: #fff;
+}
+
+.dark-mode .service-col-1 {
+  background-color: #415749;
+  color: #fff;
+}
+
+.dark-mode .footer-div {
+  background-color: #415749;
+  border-radius: 10px;
+}
+
+.scroll-icon {
+  transition: color 0.1s;
+}
+
+.dark-mode .scroll-icon {
+  color: #415749 !important;
+}
+
+.scrolling .scroll-icon {
+  color: #415749 !important;
 }
